[package]
name = "superdev-fellowship"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing-subscriber = "0.3.19"
